improve shit with dns...

--- a/web_server/inite.conf
+++ b/web_server/inite.conf
@@ -17,4 +17,11 @@
                   Require all granted
           </Files>
   </Directory>
+
+  <Directory /root/Documents/soft/portal/inite/static>                            
+    Options Indexes FollowSymLinks                                              
+    AllowOverride None
+    Require all granted
+  </Directory>
+
 </VirtualHost>
