--- a/customDNS/fakeDNS.service
+++ b/customDNS/fakeDNS.service
@@ -4,7 +4,8 @@ Description=DNS del projecte
 [Service]
 Envirionment=PYTHONUNBUFFERED=1
 Restart=on-failure
-ExecStart=/usr/bin/python2 /usr/bin/fakeDNS.py
+ExecStart=/usr/bin/python2 /root/inite/customDNS/fakeDNS.py
+RestartSec=1
 
 [Install]
 WantedBy=default.target
