--- a/customDNS/fakeDNS.service
+++ b/customDNS/fakeDNS.service
@@ -4,7 +4,7 @@ Description=DNS del projecte
 [Service]
 Envirionment=PYTHONUNBUFFERED=1
 Restart=on-failure
-ExecStart=/usr/bin/python2 /usr/bin/fakeDNS.py
+ExecStart=/usr/bin/python2 /usr/local/customDNS/fakeDNS.py
 
 [Install]
 WantedBy=default.target
