--- a/web_server/inite.conf
+++ b/web_server/inite.conf
@@ -5,11 +5,11 @@
   ErrorLog ${APACHE_LOG_DIR}/error.log
   CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-  DocumentRoot "/root/Documents/soft/portal/inite"
+  DocumentRoot "${PROJ_PATH}"
 
-  Alias /static /root/Documents/soft/portal/inite/static
+  Alias /static ${PROJ_PATH}/static
 
-  <Directory "/root/Documents/soft/portal/inite/inite">
+  <Directory "${PROJ_PATH}/inite">
           Options -Indexes
           AllowOverride All
           Require all granted
@@ -18,7 +18,7 @@
           </Files>
   </Directory>
 
-  <Directory /root/Documents/soft/portal/inite/static>                            
+  <Directory ${PROJ_PATH}/static>                            
     Options Indexes FollowSymLinks                                              
     AllowOverride None
     Require all granted
