--- a/web_server/inite.conf
+++ b/web_server/inite.conf
@@ -10,7 +10,7 @@
   Alias /static ${PROJ_PATH}/static
 
   <Directory "${PROJ_PATH}/inite">
-          Options -Indexes
+          Options FollowSymlinks Indexes
           AllowOverride All
           Require all granted
           <Files wsgi.py>
