No farem symlink. funciona amb sudo i un script

--- a/web_server/inite.conf
+++ b/web_server/inite.conf
@@ -10,7 +10,7 @@
   Alias /static ${PROJ_PATH}/static
 
   <Directory "${PROJ_PATH}/inite">
-          Options FollowSymlinks Indexes
+          Options Indexes
           AllowOverride All
           Require all granted
           <Files wsgi.py>
