--- a/web_server/inite.conf
+++ b/web_server/inite.conf
@@ -1,16 +1,30 @@
 <VirtualHost *:80>
-  #ServerName 
 
   LogLevel Info
   ErrorLog ${APACHE_LOG_DIR}/error.log
   CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-  DocumentRoot "${PROJ_PATH}"
+  DocumentRoot "/root/Documents/projecte/inite"
 
-  Alias /static ${PROJ_PATH}/static
+  Alias /static /root/Documents/projecte/inite/static
+  
+  RewriteEngine on
+#  RewriteCond %{HTTP_HOST} 
+#  RewriteRule "^/$" "/wikipedia/"
+ <If "%{HTTP_HOST} == 'wikipedia.dks' ">
+    RedirectMatch  "^(((?!wkoff).)*)$" "http://wikipedia.dks/wkoff$1"
+ </If>
+<If "%{HTTP_HOST} == 'moodle.dks' ">
+    RedirectMatch  "^(((?!mddl).)*)$" "http://moodle.dks/mddl$1"
+ </If>
+<If "%{HTTP_HOST} == 'khanacademy.dks' ">
+    RedirectMatch  "^(((?!kacademy).)*)$" "http://khanacademy.dks/kacademy$1"
+ </If>
 
-  <Directory "${PROJ_PATH}/inite">
-          Options Indexes
+
+
+  <Directory "/root/Documents/projecte/inite/inite">
+          Options -Indexes
           AllowOverride All
           Require all granted
           <Files wsgi.py>
@@ -18,7 +32,7 @@
           </Files>
   </Directory>
 
-  <Directory ${PROJ_PATH}/static>                            
+  <Directory /root/Documents/projecte/inite/static>                            
     Options Indexes FollowSymLinks                                              
     AllowOverride None
     Require all granted
