--- a/web_server/inite.conf
+++ b/web_server/inite.conf
@@ -5,13 +5,13 @@
   CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 
-  <If "%{HTTP_HOST} == 'wikipedia.dks' ">
+  <If "%{HTTP_HOST} =~ /.*wikipedia.dks$/ ">
     RedirectMatch  "^(((?!wkoff).)*)$" "http://wikipedia.dks/wkoff$1"
   </If>
-  <If "%{HTTP_HOST} == 'moodle.dks' ">
+  <If "%{HTTP_HOST} =~ /.*moodle.dks$/ ">
     RedirectMatch  "^(((?!mddl).)*)$" "http://moodle.dks/mddl$1"
   </If>
-  <If "%{HTTP_HOST} == 'khanacademy.dks' ">
+  <If "%{HTTP_HOST} =~ /.*khanacademy.dks$/ ">
     RedirectMatch  "^(((?!kacademy).)*)$" "http://khanacademy.dks/kacademy$1"
   </If>
 
