--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,13 +1,14 @@
-asgiref==3.2.3
-django-postgres-copy==2.4.2
-djproxy==2.3.5
 certifi==2019.11.28
 chardet==3.0.4
-Django==3.1
+Django==3.1.12
+django-postgres-copy==2.4.2
+djangorestframework==3.11.2
+djproxy==2.3.5
 idna==2.8
+mod_wsgi
+mod_wsgi-httpd
 psycopg2==2.8.4
 pytz==2019.3
-requests==2.22.0
+requests==2.25.1
 sqlparse==0.3.0
-urllib3==1.25.8
-djangorestframework==3.11.0
+urllib3==1.26.5
