makemigrations and migrate portal models

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -22,6 +22,7 @@ RUN apt install -yyy    libpq-dev    \
                         curl
 
 RUN python3 -m venv /venv && \
+	/venv/bin/python3 -m pip install --upgrade pip && \
     . /venv/bin/activate && \
     pip install $(curl https://raw.githubusercontent.com/aucoop/inite/dockerize/web/requirements.txt)
 
@@ -33,6 +34,7 @@ RUN useradd webapp && chown -R webapp:webapp /webapp/
 # Create a link to an existing file (with docker approach might not make sense)
 RUN mkdir /etc/inite && ln -s /webapp/variables.json /etc/inite/variables.json
 
-CMD su webapp -s /bin/bash -c '. /venv/bin/activate && \
-                               mod_wsgi-express start-server \ 
-                               --url-alias /static ./static /webapp/inite/wsgi.py'
+CMD su webapp -s /bin/bash -c ' . /venv/bin/activate && \
+								python3 manage.py makemigrations && \
+								python3 manage.py migrate portal && \
+								mod_wsgi-express start-server --url-alias /static ./static /webapp/inite/wsgi.py'
